# watch-converter

./: .gitignore  Pipfile  README.md  entrypoint.py  pyproject.toml  pytest.ini
converter/: __init__.py  __main__.py  converter.py  image.py
converter/algorithms/: __init__.py  base.py  complex.py  simple.py
converter/utils/: argparse.py
magic/: colors.py  filename_tool.py  load.py  main.py  size.py
tests/: test_algorithm.py
watch_converter/: algorithm.py
